<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_pending_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/pending_cart" />
        <item
            android:id="@+id/nav_update_crates"
            android:icon="@drawable/ic_crates"
            android:title="@string/update_crates" />
        <item
            android:id="@+id/nav_stock"
            android:icon="@drawable/ic_stock"
            android:title="@string/stock" />
        <item
            android:id="@+id/nav_sale"
            android:icon="@drawable/ic_sale"
            android:title="@string/sale" />


        <item android:title="@string/other">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_settings"
                        android:icon="@drawable/ic_settings"
                        android:title="@string/settings" />
                    <item
                        android:id="@+id/nav_user_guide"
                        android:icon="@drawable/ic_user_guide"
                        android:title="@string/user_guide" />
                    <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/ic_logout"
                        android:title="@string/logout" />
                    <item
                        android:id="@+id/nav_helpline"
                        android:icon="@drawable/ic_helpline"
                        android:title="@string/helpline" />

                </group>
            </menu>
        </item>

    </group>
</menu>