<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/verify_mobile_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_otp_sent_on_your_registered_mobile_number"
        android:layout_margin="@dimen/margin_10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />


    <include layout="@layout/otp_view"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_55dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:theme="@style/GreenButtonStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:gravity="center"
        android:text="@string/didnt_received_otp_yet"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:text="@string/resend_otp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


</LinearLayout>