<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_5dp"
    tools:context=".fragment.PendingCart">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/pending_cart"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:paddingHorizontal="@dimen/padding_10dp"
        android:paddingVertical="@dimen/padding_7dp"
        android:layout_marginTop="@dimen/padding_10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_height="wrap_content"
            android:text="@string/no"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="25"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_height="wrap_content"
            android:text="@string/item"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="15"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_height="wrap_content"
            android:text="@string/total_weight"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="15"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_height="wrap_content"
            android:text="@string/total_items"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="15"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="25"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_height="wrap_content"
            android:text="@string/action"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPendingCartItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>