<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginHorizontal="@dimen/margin_3dp"
    android:layout_marginTop="@dimen/margin_3dp"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/tvItem"
        android:layout_width="0dp"
        android:layout_weight="40"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_14sp"
        android:text="@string/item"/>
    <TextView
        android:id="@+id/tvQty"
        android:layout_width="0dp"
        android:layout_weight="20"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_14sp"
        android:text="@string/qty"/>
    <TextView
        android:id="@+id/tvRate"
        android:layout_width="0dp"
        android:layout_weight="20"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:gravity="center"
        android:textSize="@dimen/text_size_14sp"
        android:text="@string/rate"/>

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:text="@string/total1"
        android:gravity="right"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_14sp" />
</LinearLayout>