<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_to_poshinda_pos"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="@dimen/width_250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText
        android:id="@+id/etUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30dp"
        android:background="@drawable/custom_border_green"
        android:hint="@string/enter_pos_id"
        android:paddingHorizontal="@dimen/padding_20dp"
        android:paddingVertical="@dimen/padding_10dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_border_green"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/padding_20dp"
                android:fontFamily="sans-serif"
                android:layout_centerVertical="true"
                android:paddingVertical="@dimen/padding_10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            <ImageView
                android:id="@+id/ivViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_eye_outline"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_10dp"
                android:tint="@color/colorAccent"/>
        </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:layout_gravity="right"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_55dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:theme="@style/GreenButtonStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:gravity="center"
        android:text="@string/or"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <Button
        android:id="@+id/btLoginWithOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="@drawable/custom_border_green"
        android:paddingHorizontal="@dimen/padding_20dp"
        android:text="@string/login_with_otp"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent" />
</LinearLayout>