<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_30dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:layout_above="@+id/btUpdatePassword"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30dp"
            android:background="@drawable/custom_border_green"
            android:hint="@string/enter_old_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/padding_20dp"
            android:fontFamily="sans-serif"
            android:paddingVertical="@dimen/padding_10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:background="@drawable/custom_border_green"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/padding_20dp"
            android:fontFamily="sans-serif"
            android:paddingVertical="@dimen/padding_10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:background="@drawable/custom_border_green"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/padding_20dp"
            android:fontFamily="sans-serif"
            android:paddingVertical="@dimen/padding_10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <Button
        android:id="@+id/btUpdatePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_password"
        android:textAllCaps="false"
        android:layout_margin="@dimen/margin_10dp"
        android:paddingHorizontal="@dimen/padding_30dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:theme="@style/GreenButtonStyle" />
</LinearLayout>