<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".fragment.Stock">
    <LinearLayout
        android:id="@+id/llData"
        android:layout_above="@+id/llTotals"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/stock_details"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:paddingHorizontal="@dimen/padding_10dp"
            android:paddingVertical="@dimen/padding_7dp"
            android:layout_marginTop="@dimen/padding_10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_height="wrap_content"
                android:text="@string/product_name"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="20"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_height="wrap_content"
                android:text="@string/total_inward_kg"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="20"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_height="wrap_content"
                android:text="@string/total_sold_kg"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="20"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_height="wrap_content"
                android:text="@string/balance_stock_kg"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvStock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llTotals"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin_5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="60"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/padding_30dp"
            android:paddingVertical="@dimen/padding_5dp"
            android:background="@drawable/custom_border_gray_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_inward"
                android:textColor="@color/colorBlack"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="220 Kg"
                android:layout_marginTop="@dimen/margin_3dp"
                android:textColor="@color/colorBlack"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:paddingHorizontal="@dimen/padding_30dp"
            android:paddingVertical="@dimen/padding_5dp"
            android:background="@drawable/custom_border_green_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_sold"
                android:textColor="@color/colorAccent"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="220 Kg"
                android:layout_marginTop="@dimen/margin_3dp"
                android:textColor="@color/colorAccent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/padding_30dp"
            android:paddingVertical="@dimen/padding_5dp"
            android:background="@drawable/custom_border_primary_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_balance"
                android:textColor="@color/colorRedButton"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="220 Kg"
                android:layout_marginTop="@dimen/margin_3dp"
                android:textColor="@color/colorRedButton"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
